# ifund

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Prompt-基金AI定性分析填充.md  README.md  pyproject.toml  service.sh  start.sh  我做iFund的心路历程.md  算法说明-仓位建议生成.md
backend/: .env.example  backfill_acc_nav.py  ifund_cli.py  requirements.txt  schema_sqlite.sql
backend/app/: database.py  main.py  models.py  preset_access.py  schemas.py
backend/app/cluster/algo/: dedup.py  pipeline.py
backend/app/cluster/api/: router.py
backend/app/common/: sync_launcher.py  task_runner.py  task_support.py  worker_base.py
backend/app/db/: __init__.py  base.py  sqlite.py
backend/app/fund/: models.py
backend/app/fund/api/: router.py
backend/app/fund/crud/: fund_crud.py
backend/app/fund/fetch/: fetcher.py
backend/app/fund_detail/api/: router.py
backend/app/fund_detail/crud/: detail_crud.py
backend/app/fund_detail/fetch/: mapper.py  worker.py
backend/app/fund_holdings/api/: router.py
backend/app/fund_holdings/crud/: holdings_crud.py
backend/app/fund_holdings/fetch/: worker.py
backend/app/routers/: auth.py
backend/cli/: __init__.py  __main__.py  analyze.py  fetch.py  helpers.py  holdings.py  metrics.py  output.py  preset.py  trade.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: request.ts
frontend/src/pages/: Dashboard.tsx  IndustryPage.tsx  Login.tsx  TokensPage.tsx  TradeCalendar.tsx
mcp_server/: README.md  requirements.txt  server.py
(+61 files in other folders)
